Add latest devices